--- a/style/layout/_header.scss
+++ b/style/layout/_header.scss
@@ -2,7 +2,6 @@ header{
     background: url(../../assets/img/bg-slider-06.jpg) center/cover;
     height: 100vh;
     width: 100%;
-    z-index: -1;
     position: relative;
     color: $white;
 
@@ -41,6 +40,9 @@ header{
                 li{
                     padding: 7px;
                     scale: 0.8;
+                    &:hover{
+                        scale: 1;
+                    }
                 }
             }
         }
