--- a/style/layout/_section1.scss
+++ b/style/layout/_section1.scss
@@ -1,11 +1,14 @@
 .section1{
-    max-height: 440px;
     display: grid;
     grid-template-columns: 50% 50%;
     background: $white ;
     }
     .section1-left{
         position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
         max-height: 100%;
         padding: 20px 15px;
         margin: 15px;
@@ -36,8 +39,10 @@
             scale: 0.5;
             border-radius: 50%;
             position: absolute;
-            top: 225px;
-            left: 39.5%;
+            top: 55%;
+            left: 50%;
+            right: 50%;
+            transform: translateX(-100%);
             
 
         }
@@ -58,5 +63,6 @@
     }
     .section1-right{
         background: url(../../assets/img/store-01.jpg) center/cover;
+        overflow: hidden;
 
     }
