--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background: url(../../assets/img/bg-footer.jpg) center/cover;
+    background: url(../../assets/image/bg-footer.jpg) center/cover;
     z-index: -1;
     color: $white;
     height: 250px;
