--- a/style/layout/_section1.scss
+++ b/style/layout/_section1.scss
@@ -62,7 +62,7 @@
         
     }
     .section1-right{
-        background: url(../../assets/img/store-01.jpg) center/cover;
+        background: url(../../assets/image/store-01.jpg) center/cover;
         overflow: hidden;
 
     }
