--- a/style/layout/_section2.scss
+++ b/style/layout/_section2.scss
@@ -8,7 +8,7 @@
     &::before{
         content: "";
         position: absolute;
-        background: url(../../assets/img/bg-menu-01.jpg) bottom/cover;
+        background: url(../../assets/image/bg-menu-01.jpg) bottom/cover;
         width: 100%;
         height: 89vh;
         bottom:0;
