--- a/style/layout/_section4.scss
+++ b/style/layout/_section4.scss
@@ -68,7 +68,7 @@
         display: grid;
         grid-template-columns: 40% 60%;
         .date-container{
-            background: url(../../assets/img/event-01.jpg) center/cover;
+            background: url(../../assets/image/event-01.jpg) center/cover;
             z-index: 1;
             display: flex;
             justify-content: center;
@@ -110,7 +110,7 @@
         display: grid;
         grid-template-columns: 40% 60%;
         .date-container{
-            background: url(../../assets/img/event-02.jpg) center/cover;
+            background: url(../../assets/image/event-02.jpg) center/cover;
             z-index: 1;
             display: flex;
             justify-content: center;
@@ -153,7 +153,7 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        background: url(../../assets/img/event-03.jpg) center/cover;
+        background: url(../../assets/image/event-03.jpg) center/cover;
         .box-right-container{
             background: $white;
             margin: 30px;
