--- a/style/layout/_section5.scss
+++ b/style/layout/_section5.scss
@@ -9,7 +9,7 @@
     &::after{
         content:"";
         position: absolute;
-        background: url(../../assets/img/gmap.jpg) center/cover;
+        background: url(../../assets/image/gmap.jpg) center/cover;
         width: 100%;
         height: 50vh;
         z-index: 1;
@@ -25,7 +25,7 @@
         &::before{
             content: "";
             position: absolute;
-            background: url(../../assets/img/avatar-02.jpg) center/cover;
+            background: url(../../assets/image/avatar-02.jpg) center/cover;
             height: 75px;
             width: 75px;
             border-radius: 50%;
