--- a/assets/style/_settings.scss
+++ b/assets/style/_settings.scss
@@ -1,16 +1,16 @@
 @font-face {
     font-family: "allura" ;
-    src: url(../assets/fonts/Allura-Regular.ttf);
+    src: url(../fonts/Allura-Regular.ttf);
 }
 
 @font-face {
     font-family: "poppins" ;
-    src: url(../assets/fonts/Poppins-Medium.ttf);
+    src: url(../fonts/Poppins-Medium.ttf);
 }
 
 @font-face {
     font-family: "roboto";
-    src: url(../assets/fonts/Roboto-Light.ttf);
+    src: url(../fonts/Roboto-Light.ttf);
 }
 
 $font1: Allura, cursive;
