--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -11,9 +11,12 @@ header{
         align-items: center;
         grid-template-columns: 10% 82% 8%;
         max-width: 1100px;
-        height: 12vh;
         margin: 0 auto;
 
+        @media screen and (max-width:1050px) {
+            grid-template-columns: 10% 70% 8%;
+            
+        }
 
         .nav-left{
             font-family: $font1;
@@ -75,6 +78,11 @@ header{
                 text-transform: uppercase;
                 font-size: 3.2rem;
                 letter-spacing: 10px;
+
+                @media screen and (max-width: 750px) {
+                    font-size: 2.5rem;
+                    
+                }
 
             }
             img{
