--- a/assets/style/layout/_section2.scss
+++ b/assets/style/layout/_section2.scss
@@ -1,5 +1,4 @@
 .section2{
-    height: 1000px;
     color: $white;
     background: $black;
     position: relative;
@@ -67,6 +66,12 @@
             padding-top: 40px;
             background: $white;
             color: $black;
+
+            @media screen and (max-width:1050px) {
+                grid-template-columns: 100%;
+                grid-template-rows: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
+                
+            }
             
             &::before{
                 content: "";
