--- a/assets/style/layout/_section5.scss
+++ b/assets/style/layout/_section5.scss
@@ -20,7 +20,6 @@
     .comment-container{
         z-index: 2;
         width: 65%;
-        height: 400px;
         position:relative;
         &::before{
             content: "";
@@ -35,13 +34,13 @@
         }
         .comment{
             background: $white;
-            height: 300px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
 
             p{
+                margin-top: 50px;
                 line-height: 30px;
                 width: 80%;
             }
