--- a/assets/style/layout/_section2.scss
+++ b/assets/style/layout/_section2.scss
@@ -100,6 +100,11 @@
                     justify-content: center;
                     border-radius: 50%;
                     width: 100%;
+                    @media screen and (max-width:750px) {
+                        padding-top: 50px;
+                       
+                        
+                    }
                 }
                 .nom-du-plat{
                     display: flex;
