--- a/assets/style/layout/_section2.scss
+++ b/assets/style/layout/_section2.scss
@@ -46,11 +46,16 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-around;
+             
                 li{
                     border-bottom: 1px solid $white;
                     padding: 50px 0 7px 0;
                     font-weight: 400;
-                   
+                    @media screen and (max-width:750px) {
+                        font-size: 0.8rem;
+                       
+                        
+                    }
                 }
             }
         }
@@ -93,7 +98,11 @@
                 padding-right: 30px;
                 padding-bottom: 40px;
                 border-bottom: 1px dashed rgba(0, 0, 0, 0.208);
-                
+                @media screen and (max-width:450px) {
+                    grid-template-columns: 1fr;
+                   
+                    
+                }
                 img{
                     display: flex;
                     flex-direction: column;
@@ -103,6 +112,13 @@
                     @media screen and (max-width:750px) {
                         padding-top: 50px;
                        
+                       
+                        
+                    }
+                    @media screen and (max-width:450px) {
+                        padding-top: 50px;
+                        scale: 0.7;
+                       
                         
                     }
                 }
@@ -111,6 +127,12 @@
                     flex-direction: column;
                     justify-content: center;
                     text-align: left;
+                    @media screen and (max-width:650px) {
+                        text-align: center;
+                       
+                        
+                    }
+
                 h4{
                     text-transform: uppercase;
                     font-size: 0.8rem;
